fixed video loading spinner being too small

--- a/MicroTube.Client.Angular/src/app/video-listing/video-listing-main/video-listing-main.component.scss
+++ b/MicroTube.Client.Angular/src/app/video-listing/video-listing-main/video-listing-main.component.scss
@@ -63,7 +63,7 @@
 .video-loader-container {
   display: flex;
   width: 100%;
-  height:32px;
+  height:fit-content;
   justify-content: center;
 }
 .uploader-filter {
